Show episode information on patients card.

--- a/app/views/patients/_patient_episode_summary.haml
+++ b/app/views/patients/_patient_episode_summary.haml
@@ -1,9 +1,9 @@
-- if encounters.empty?
+- if episodes.empty?
   = empty_data icon: 'icon-outline-test xx-large' do |c|
     - c.body do
       %h1 No medical history
-      %p Create a #{link_to 'new episode', new_encounter_path, class: 'button add'} in order to start the medical history.
-      %p You can not create test orders until a #{link_to 'new episode', new_encounter_path, class: 'button add'} has been added.
+      %p Create a #{link_to 'new episode', new_patient_episode_path(patient), class: 'button add'} in order to start the medical history.
+      %p You can not create test orders until a #{link_to 'new episode', new_patient_episode_path(patient), class: 'button add'} has been added.
 
 - else
   .row.labelHeader
@@ -12,9 +12,9 @@
     .col-6
       %ul
         %li
-          = link_to 'Add Episode', new_encounter_path, class: 'button add'
+          = link_to 'Add Episode', new_patient_episode_path(patient), class: 'button add'
   .panel.patient-details
-    - @encounters.each do |encounter|
+    - episodes.each do |episode|
       .row
         .col-2.summary.patient
           .stat
@@ -22,16 +22,18 @@
               %span
                 %i.fa.fa-navicon
         .col-10
-          - if has_access?(encounter, Policy::Actions::UPDATE_ENCOUNTER)
-            %ul.button-container
-              %li
-                = link_to 'Edit Episode', edit_encounter_path(encounter), class: 'button edit'
           %ul
             %li
-              = format_date(encounter.start_time)
-            %li
-              = patient_diagnostic(encounter)
+              = link_to 'Edit Episode', edit_patient_episode_path(patient, episode), class: 'button edit'
           %ul
-            %li &nbsp;
             %li
-              = patient_observations(encounter)
+              = link_to diagnosis_name(episode.diagnosis), edit_patient_episode_path(patient, episode)
+            %li
+              = hiv_status_name(episode.hiv_status)
+            %li
+              = "#{history_options_name(episode.initial_history)} - #{previous_history_options_name(episode.previous_history)}"
+          %ul
+            %li
+              = drug_resistance_name(episode.drug_resistance)
+            %li
+              = treatment_outcome_name(episode.outcome)
