--- a/app/views/shared/_address.html.haml
+++ b/app/views/shared/_address.html.haml
@@ -1,23 +1,35 @@
 .row
   .col.pe-2
-    = f.label :address
+    %div.tooltip
+      = f.label :address
+      %div.tooltiptext_r 
+        A Street address
   .col
     = f.text_field :address, :class => 'input-large'
 
 .row
   .col.pe-2
-    = f.label :city
+    %div.tooltip
+      = f.label :city
+      %div.tooltiptext_r 
+        A City name
   .col
     = f.text_field :city, :class => 'input-large'
 
 .row
   .col.pe-2
-    = f.label :state
+    %div.tooltip
+      = f.label :state
+      %div.tooltiptext_r 
+        A State / County name
   .col
     = f.text_field :state, :class => 'input-large'
 
 .row
   .col.pe-2
-    = f.label :post_code
+    %div.tooltip
+      = f.label :post_code
+      %div.tooltiptext_r 
+        A Postal / Zip Code
   .col
     = f.text_field :zip_code, :class => 'input-large'
