--- a/app/views/sites/_form.html.haml
+++ b/app/views/sites/_form.html.haml
@@ -5,19 +5,28 @@
     .col.pe-6
       .row
         .col.pe-4
-          = f.label :institution
+          %div.tooltip
+            = f.label :institution
+            %div.tooltiptext_r 
+              Institution this Site is part of
         .col
           .value= f.object.institution
 
       .row
         .col.pe-4
-          = f.label :name
+          %div.tooltip
+            = f.label :name
+            %div.tooltiptext_r 
+              Name of the Site
         .col
           = f.text_field :name, :class => 'input-large'
       - if @site.new_record? || @can_move
         .row
           .col.pe-4
-            = f.label :parent
+            %div.tooltip
+              = f.label :parent
+              %div.tooltiptext_r 
+                The Site this Site is a Child of
           .col
             = cdx_select form: f, name: :parent_id, class: 'input-x-large' do |select|
               - select.item "", "None"
@@ -25,7 +34,10 @@
       - elsif @site.parent
         .row
           .col.pe-4
-            = f.label :parent
+            %div.tooltip
+              = f.label :parent
+              %div.tooltiptext_r 
+                The Site this Site is a Child of
           .col
             = @site.parent.name
 
@@ -36,7 +48,10 @@
   = render partial: "shared/address", :locals => { :f => f , model_type: "site"}
   .row
     .col.pe-2
-      = f.label :sample_id_reset_policy, "Sample ID reset policy"
+      %div.tooltip
+        = f.label :sample_id_reset_policy, "Sample ID reset policy"
+        %div.tooltiptext_r 
+          Sample ID reset policy Tooltip
     .col
       = cdx_select form: f, name: :sample_id_reset_policy, class: 'input-large sample-id-reset' do |select|
         - select.item "yearly", "Yearly"
@@ -44,18 +59,27 @@
         - select.item "weekly", "Weekly"
   .row
     .col.pe-2
-      = f.label :allows_manual_entry, "Allow manual entry"
+      %div.tooltip
+        = f.label :allows_manual_entry, "Allow manual entry"
+        %div.tooltiptext_r 
+          Does this Site allow Manual Entry of Data?
     .col
       = f.check_box :allows_manual_entry
       %label{for: 'site_allows_manual_entry'} &nbsp;
   .row
     .col.pe-2
-      = f.label :main_phone_number
+      %div.tooltip
+        = f.label :main_phone_number
+        %div.tooltiptext_r 
+          Site Phone Number
     .col
       = f.text_field :main_phone_number, :class => 'input-large'
   .row
     .col.pe-2
-      = f.label :email_address
+      %div.tooltip
+        = f.label :email_address
+        %div.tooltiptext_r 
+          Site Email Contact Address
     .col
       = f.email_field :email_address, :class => 'input-large'
 
