--- a/app/views/xpert_results/_form.haml
+++ b/app/views/xpert_results/_form.haml
@@ -5,7 +5,7 @@
     .col.pe-2
       = f.label :sample_collected_on
     .col
-      = f.text_field :sample_collected_on, value: I18n.l(@xpert_result.sample_collected_on), placeholder: I18n.t('date.input_format.placeholder')
+      = f.date_field :sample_collected_on
 
   .row
     .col.pe-2
@@ -29,7 +29,7 @@
     .col.pe-2
       = f.label :result_on
     .col
-      = f.text_field :result_on, value: I18n.l(@xpert_result.result_on), placeholder: I18n.t('date.input_format.placeholder')
+      = f.date_field :result_on
 
   .row.button-actions
     .col
