--- a/app/views/comments/_form.haml
+++ b/app/views/comments/_form.haml
@@ -5,7 +5,7 @@
     .col.pe-2
       = f.label :commented_on
     .col
-      = f.text_field :commented_on, value: I18n.l(comment.commented_on), placeholder: I18n.t('date.input_format.placeholder')
+      = f.date_field :commented_on, value: comment.commented_on
 
   .row
     .col.pe-2
