--- a/app/views/patients/_patient_summary.haml
+++ b/app/views/patients/_patient_summary.haml
@@ -17,21 +17,37 @@
             = link_to('Edit patient', edit_patient_path(patient), class: 'button edit')
       %ul
         %li
+          %label
+            = Patient.human_attribute_name(:name)
           = patient_display_name(patient.name)
         %li
+          %label
+            = Patient.human_attribute_name(:entity_id)
           = patient.entity_id
         %li
+          %label
+            = Patient.human_attribute_name(:gender)
           = patient.gender
       %ul
         %li
+          %label
+            = Patient.human_attribute_name(:dob)
           = patient_birth_date(patient.dob)
         %li
+          %label
+            = Patient.human_attribute_name(:phone)
           = patient.phone
         %li
+          %label
+            = Patient.human_attribute_name(:email)
           = patient.email
 
       %ul
         %li
+          %label
+            = Patient.human_attribute_name(:address)
           = patient.address
         %li
-          = patient.created_at.strftime(I18n.t('date.input_format.pattern'))
+          %label
+            = Patient.human_attribute_name(:created_at)
+          = I18n.l(patient.created_at, format: :long)
