--- a/app/views/culture_results/new.haml
+++ b/app/views/culture_results/new.haml
@@ -1,9 +1,9 @@
-#microscopy-results.testflow
+#culture-results.testflow
   .container
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('microscopy_results.new.header')
+          = I18n.t('culture_results.new.header')
       .col-6
         %ul
           %li
