--- a/app/views/patients/_patient_summary.haml
+++ b/app/views/patients/_patient_summary.haml
@@ -1,6 +1,7 @@
 .row.labelHeader
   .col-6
-    %h3 Patient Summary
+    %h3
+      = I18n.t('patients.show.patient_summary')
   .col-6
     %ul
 .panel.patient-details
@@ -14,7 +15,7 @@
       - if has_access?(@patient, Policy::Actions::UPDATE_PATIENT)
         %ul.button-container
           %li
-            = link_to('Edit patient', edit_patient_path(patient), class: 'button edit')
+            = link_to(I18n.t('patients.show.edit_patient'), edit_patient_path(patient), class: 'button edit')
       %ul
         %li
           %label
