--- a/app/views/devices/token.haml
+++ b/app/views/devices/token.haml
@@ -1,15 +1,19 @@
 .span12
-  %h3 Activation Token Generated
+  %h3
+    = I18n.t('devices.token.token_header')
 
   %p
-    %strong Token:
+    %strong
+      = I18n.t('devices.token.token')
     = @token.value
 
   %p
-    This token can be used only once. It will be valid as long as device secret key does not change.
+    = I18n.t('devices.token.warning')
+
   %p
-    %strong This is the last time you will be able to view the token. Please keep it safe
+    %strong
+      = I18n.t('devices.token.last_time')
 
     %hr
 
-    = link_to "Ok, understood, go back", edit_device_path(@device), class: 'btn'
+    = link_to = I18n.t('devices.token.go_back'), edit_device_path(@device), class: 'btn'
