--- a/app/views/devices/_activation_token.haml
+++ b/app/views/devices/_activation_token.haml
@@ -1,8 +1,10 @@
 - if @device.activation_token
-  .key= @device.activation_token.scan(/.{4}/).join("-")
-  %p= barcode(@device.activation_token)
+  .key
+    = @device.activation_token.scan(/.{4}/).join("-")
+  %p
+    = barcode(@device.activation_token)
 - else
-  = link_to 'Reactivate',
+  = link_to I18n.t('devices.activation_token.reactivate'),
     generate_activation_token_device_path(@device, target: '#activation-token'),
     remote: true,
-    data: { confirm: "Are you sure?" }
+    data: { confirm: I18n.t('devices.activation_token.confirm') }
