--- a/app/views/devices/_form.haml
+++ b/app/views/devices/_form.haml
@@ -20,7 +20,7 @@
         = f.label :site
       .col
         = cdx_select form: f, name: :site_id, class: 'input-x-large' do |select|
-          - select.item "", "None"
+          - select.item "", I18n.t('devices.form.none')
           - select.items(@sites, :id, :name)
   - elsif f.object.new_record?
     = f.hidden_field :site_id
@@ -51,9 +51,9 @@
 
   .row.button-actions
     .col
-      = f.submit 'Save', class: 'btn-primary'
+      = f.submit I18n.t('devices.form.save'), class: 'btn-primary'
       - if @can_delete
-        = link_to "Delete", @device, method: :delete, data: { confirm: "You are about to permanently delete this device. This action CANNOT be undone. Are you sure you want to proceed?" }, class: 'btn-secondary pull-right'
+        = link_to I18n.t('devices.form.delete'), @device, method: :delete, data: { confirm: I18n.t('devices.form.confirm_delete') }, class: 'btn-secondary pull-right'
 
 :coffeescript
   $ ->
