--- a/app/views/devices/_secret_key.haml
+++ b/app/views/devices/_secret_key.haml
@@ -1,9 +1,10 @@
 - if @device.plain_secret_key
   .key= @device.plain_secret_key
   %p= barcode(@device.plain_secret_key)
-  %strong This is the last time you will be able to view this key. Please keep it safe.
+  %strong
+    = I18n.t('devices.secret_key.warning')
 - else
-  = link_to 'Regenerate Key',
+  = link_to I18n.t('devices.secret_key.regenerate_key'),
     regenerate_key_device_path(@device, target: '#secret-key'),
     remote: true,
-    data: { confirm: "Are you sure?" }
+    data: { confirm: I18n.t('devices.secret_key.confirm') }
