--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -93,16 +93,18 @@
       .small-8.columns.box
         %header
           =image_tag('img/site.png')
-          %h3 Devices Not Responding
+          %h3 
+            = I18n.t('dashboard.index.devices_not_responding')
         .box-content
-          #chartTotalTestsSite{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartDevicesNotResponding', chartData: Extras::Charts::HorizontalColumns.new(@dashboard_report.devices_not_reporting).render
+          #chartDevicesNotResponding{:style => "height: 200px; width: 100%;"}
+            = react_component 'CanvasJsChart', chartDiv: 'chartDevicesNotResponding', chartData: Extras::Charts::HorizontalColumns.new(@dashboard_report.devices_not_responding).render
       .small-4.columns.box
         %header
           = image_tag('img/user.png')
-          %h3 Device Error Codes
+          %h3
+            = I18n.t('dashboard.index.device_error_codes')
         .box-content
-          #chartAverageTestsTechnician{:style => "height: 200px; width: 100%;"}
+          #chartDeviceErrorCodes{:style => "height: 200px; width: 100%;"}
             = react_component 'CanvasJsChart', chartDiv: 'chartDeviceErrorCodes', chartData: Extras::Charts::VerticalColumns.new(@dashboard_report.error_codes_by_device).render
 
     %section.row
