--- a/app/views/device_messages/index.haml
+++ b/app/views/device_messages/index.haml
@@ -5,10 +5,12 @@
     - if @messages.empty?
       = empty_data icon: 'icon-outline-instructions xx-large' do |c|
         - c.body do
-          %h1 There are no logs to report at this time
-          %p Connect a device and upload tests to see the progress here
+          %h1
+            = I18n.t('device_messages.index.no_logs')
+          %p
+            = I18n.t('device_messages.index.connect_device')
     - else
-      = cdx_table title: pluralize(@total, "message") do |t|
+      = cdx_table title: I18n.t('device_messages.index.message', count: @total) do |t|
         - t.columns do
           %col{:width => "15%"}
           %col{:width => "25%"}
@@ -20,29 +22,43 @@
           %col{:width => "5%"}
         - t.thead do
           %tr
-            %th Status
-            %th Message
-            %th Model
-            %th Device
-            %th Failures
-            %th Error Field
-            %th Date
-            %th Raw
+            %th
+              = I18n.t('device_messages.index.table_header_status')
+            %th
+              = I18n.t('device_messages.index.table_header_message')
+            %th
+              = I18n.t('device_messages.index.table_header_model')
+            %th
+              = I18n.t('device_messages.index.table_header_device')
+            %th
+              = I18n.t('device_messages.index.table_header_failure')
+            %th
+              = I18n.t('device_messages.index.table_header_error')
+            %th
+              = I18n.t('device_messages.index.table_header_date')
+            %th
+              = I18n.t('device_messages.index.table_header_raw')
         - t.tbody do
           - @messages.each do |message|
             %tr
               %td
                 - if message.index_failed
-                  Failed
-                  = link_to '(reprocess)', reprocess_device_message_path(message), method: 'post'
+                  = I18n.t('device_messages.index.failed')
+                  = link_to I18n.t('device_messages.index.reprocess'), reprocess_device_message_path(message), method: 'post'
                 - else
-                  Success
-              %td{title: message.index_failure_reason}= message.index_failure_reason
-              %td= message.device.device_model.name
-              %td= message.device.name
-              %td= message.index_failure_data[:number_of_failures]
-              %td= message.index_failure_data[:target_field]
-              %td= @localization_helper.format_datetime_time_zone(message.created_at, message.device.time_zone)
+                  = I18n.t('device_messages.index.success')
+              %td{title: message.index_failure_reason}
+                = message.index_failure_reason
+              %td
+                = message.device.device_model.name
+              %td
+                = message.device.name
+              %td
+                = message.index_failure_data[:number_of_failures]
+              %td
+                = message.index_failure_data[:target_field]
+              %td
+                = @localization_helper.format_datetime_time_zone(message.created_at, message.device.time_zone)
               %td
                 = link_to raw_device_message_path(message) do
                   .icon-download.icon-gray
