--- a/app/views/test_results/show.haml
+++ b/app/views/test_results/show.haml
@@ -14,15 +14,17 @@
       %span
         = I18n.t('test_results.show.test_belongs_to')
         = link_to I18n.t('test_results.show.click_here'), encounter_path(@test_result.encounter)
-        to view it.
+        = I18n.t('test_results.show.to_view_it')
 
 .row
   .col
     = card image: "card-unkown.png" do |c|
       - c.top do
-        %b= @test_result.core_fields[TestResult::NAME_FIELD]
+        %b
+          = @test_result.core_fields[TestResult::NAME_FIELD]
         %br
-        %span= @localization_helper.format_datetime(@test_result.core_fields[TestResult::START_TIME_FIELD]) # TODO should use device timezone (?)
+        %span
+          = @localization_helper.format_datetime(@test_result.core_fields[TestResult::START_TIME_FIELD]) # TODO should use device timezone (?)
         - if @show_institution
           %div
             = I18n.t('test_results.show.institution_name', @test_result.institution.name)
@@ -81,7 +83,8 @@
 
     .col
       -# TODO add print button
-      .value= sample_id
+      .value
+        = sample_id
       %br
       %br
       = raw sample_id_barcode.to_html
