--- a/app/views/device_logs/index.haml
+++ b/app/views/device_logs/index.haml
@@ -13,7 +13,7 @@
       - @device_logs.each do |log|
         %tr
           %td
-            = @localization_helper.format_datetime_time_zone(log.created_at, @device.time_zone)
+            = Extras::Dates::Format.datetime_with_time_zone(log.created_at, :long, @device.time_zone)
           %td
             = truncate log.message, length: 100
           %td
