Adds Form title helper

--- a/app/views/episodes/_form.haml
+++ b/app/views/episodes/_form.haml
@@ -2,7 +2,8 @@
   .container
     .row.labelHeader
       .row.col-6
-        %h3 New Episode (TB)
+        %h3
+          = form_title(@episode, 'Episode (TB)')
       .row.col-6
         %ul
           %li
