Correct CSS for Create and Edit

--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -751,7 +751,7 @@ padding:15px;
     justify-content: flex-start;
     padding: 0 5px;
 }
-#new_episode select, #new_episode select option{
+.zebra select, .zebra select option{
   color:#000;
 }
 
