Update device graphics.

--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -10,7 +10,7 @@
             = date_field('range','start_time[gte]', value: (params['range'].nil? ? '' : params['range']['start_time']['gte']), max: Date.today)
 
           .topdateto
-            %label.block 
+            %label.block
               = I18n.t('dashboard.index.date_to')
             = date_field('range','start_time[lte]', value: (params['range'].nil? ? '' : params['range']['start_time']['lte']) )
 
@@ -28,7 +28,7 @@
   :javascript
     $(document).ready( function()
     {
-      $('input[name=since]').on('change', function() 
+      $('input[name=since]').on('change', function()
       {
         $('input#range_start_time\\[gte\\]').val( $(this).val() );
         $('input#range_start_time\\[lte\\]').val( new Date().toJSON().slice(0,10) );
@@ -36,23 +36,7 @@
     })
 
   %main
-    %section.row
-      .small-8.columns.box
-        %header
-          = image_tag('img/test-tube-rack.png')
-          %h3
-            = I18n.t('dashboard.index.total_tests')
-        .box-content
-          #chartContainer{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartContainer', chartData: Extras::Charts::VerticalColumns.new(@dashboard_report.total_tests).render
-      .small-4.columns.box
-        %header
-          = image_tag('img/test-tube.png')
-          %h3
-            = I18n.t('dashboard.index.failed_tests')
-        .box-content
-          #failedChartContainer{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'failedChartContainer', chartData: Extras::Charts::Pie.new(@dashboard_report.failed_tests).render
+    = render partial: 'total_tests', locals: { total_tests: Extras::Charts::VerticalColumns.new(@dashboard_report.total_tests).render, failed_tests: Extras::Charts::Pie.new(@dashboard_report.failed_tests).render }
     %section.row
       .small-6.columns.box
         %header
@@ -89,23 +73,17 @@
           #chartAverageTestsTechnician{:style => "height: 200px; width: 100%;"}
             = react_component 'CanvasJsChart', chartDiv: 'chartAverageTestsTechnician', chartData: Extras::Charts::VerticalColumns.new(@dashboard_report.average_tests_per_technician).render
 
-    -#%section.row
+    %section.row
       .small-8.columns.box
         %header
           =image_tag('img/site.png')
-          %h3 
+          %h3
             = I18n.t('dashboard.index.devices_not_responding')
         .box-content
           #chartDevicesNotResponding{:style => "height: 200px; width: 100%;"}
             = react_component 'CanvasJsChart', chartDiv: 'chartDevicesNotResponding', chartData: Extras::Charts::HorizontalColumns.new(@dashboard_report.devices_not_responding).render
       .small-4.columns.box
-        %header
-          = image_tag('img/user.png')
-          %h3
-            = I18n.t('dashboard.index.device_error_codes')
-        .box-content
-          #chartDeviceErrorCodes{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartDeviceErrorCodes', chartData: Extras::Charts::VerticalColumns.new(@dashboard_report.error_codes_by_device).render
+        = render partial: 'error_codes', locals: { error_codes_by_device: @dashboard_report.error_codes_by_device }
 
     %section.row
       .small-12.columns.box
