Add date filter to devices.

--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -1,39 +1,5 @@
 .dashboard
-  %section.row
-    .small-12.columns
-      .search
-        %form#filters-form{ action: dashboard_path }
-
-          .topdatefrom
-            %label.block
-              = I18n.t('dashboard.index.date_from')
-            = date_field('range','start_time[gte]', value: (params['range'].nil? ? '' : params['range']['start_time']['gte']), max: Date.today)
-
-          .topdateto
-            %label.block
-              = I18n.t('dashboard.index.date_to')
-            = date_field('range','start_time[lte]', value: (params['range'].nil? ? '' : params['range']['start_time']['lte']) )
-
-          .topdateperiod
-            %form#filters-form{ action: dashboard_path, 'data-auto-submit' => true }
-              .filter
-                %label.block
-                  = I18n.t('dashboard.index.date_period')
-                = cdx_select name: 'since', value: params['since'] do |select|
-                  - select.items options_for_date, :value, :label
-
-              .topbutton
-                %input#query_button.btn-primary(type='submit' value="#{I18n.t('dashboard.index.filter_button')}")
-
-  :javascript
-    $(document).ready( function()
-    {
-      $('input[name=since]').on('change', function()
-      {
-        $('input#range_start_time\\[gte\\]').val( $(this).val() );
-        $('input#range_start_time\\[lte\\]').val( new Date().toJSON().slice(0,10) );
-      });
-    })
+  = render partial: 'date_filter', locals: { filter_action: dashboard_path }
 
   %main
     = render partial: 'total_tests', locals: { total_tests: Extras::Charts::VerticalColumns.new(@dashboard_report.total_tests).render, failed_tests: Extras::Charts::Pie.new(@dashboard_report.failed_tests).render }
